# video-conferencing

rtp/: Cargo.toml  Makefile
rtp-ui/: rtp_uiApp.swift
rtp-ui.xcodeproj/: project.pbxproj
rtp-ui.xcodeproj/xcuserdata/sebastiantran.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
rtp-ui.xcodeproj/xcuserdata/sebastiantran.xcuserdatad/xcschemes/: xcschememanagement.plist
rtp-ui/Camera/: CIImage+Extension.swift  CMSampleBuffer+Extension.swift  CameraManager.swift
rtp-ui/Compression/: CompressionManager.swift
rtp-ui/Decompression/: DecompressionManager.swift
rtp-ui/Hardware/: AudioSessionManager.swift  CompressionManager.swift  DecompressionManager.swift
rtp-ui/Models/: PeerVideoManager.swift  PeerVideoModel.swift  SharedQueue.swift  ViewModel.swift
rtp-ui/Views/: CameraView.swift  ContentView.swift  JoinView.swift  PeerView.swift  PeerViewManager.swift  UIView.swift
rtp/RTPmacos.xcframework/: Info.plist
rtp/RTPmacos.xcframework/macos-arm64_x86_64/Headers/: rtpmacos.h
rtp/include/: module.modulemap
rtp/libs/: rtpmacos.h
rtp/src/: lib.rs
rtp/src/interop/: audio.rs  mod.rs  video.rs
rtp/src/packets/: mod.rs  rtcp.rs  rtp.rs
rtp/src/packets/rtcp/: mod.rs  reception_report.rs  rtcp_header.rs  sender_report.rs
rtp/src/packets/rtp/: h264.rs  mod.rs  rtp.rs
rtp/src/session_management/: delay_calculator.rs  mod.rs  peer_manager.rs  signaling_server.rs
