[package]
name = "rtp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.11.0"
dashmap = "6.1.0"
local-ip-address = "0.6.10"
rand = "0.10.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
